{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 59,
  "lineage": "5be5451d-b352-8906-1a35-cb3120509ffe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_elastip_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d0d4441ea2e612f",
            "association_id": "eipassoc-09b54c809073e0391",
            "domain": "vpc",
            "id": "eipalloc-09d0d4441ea2e612f",
            "instance": "i-044520052058ea5d0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b8b5c8fca107beb7",
            "private_dns": "ip-10-0-101-125.ec2.internal",
            "private_ip": "10.0.101.125",
            "public_dns": "ec2-52-202-146-155.compute-1.amazonaws.com",
            "public_ip": "52.202.146.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.bastion_ec2_instance.aws_iam_instance_profile.this",
            "module.bastion_ec2_instance.aws_iam_role.this",
            "module.bastion_ec2_instance.aws_iam_role_policy_attachment.this",
            "module.bastion_ec2_instance.aws_instance.this",
            "module.bastion_ec2_instance.aws_spot_instance_request.this",
            "module.bastion_ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.bastion_ec2_instance.data.aws_partition.current",
            "module.bastion_ec2_instance.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:loadbalancer/app/sap-dev-alb/5d52a8e10876ce03",
            "arn_suffix": "app/sap-dev-alb/5d52a8e10876ce03",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sap-dev-alb-856313247.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:loadbalancer/app/sap-dev-alb/5d52a8e10876ce03",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sap-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04213086f776287a1",
              "sg-074c709e38a276b7b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-071cfcdbac1f41994"
              },
              {
                "subnet_id": "subnet-0f016db4977faadbc"
              }
            ],
            "subnets": [
              "subnet-071cfcdbac1f41994",
              "subnet-0f016db4977faadbc"
            ],
            "tags": {
              "Name": "sap-dev-alb",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-alb",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": {
              "create": "30m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.app-alb.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener/app/sap-dev-alb/5d52a8e10876ce03/b61d6507994a0b85",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener/app/sap-dev-alb/5d52a8e10876ce03/b61d6507994a0b85",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:loadbalancer/app/sap-dev-alb/5d52a8e10876ce03",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.app-alb.aws_lb.this",
            "module.app-alb.aws_lb_target_group.main",
            "module.app-alb.aws_security_group.this",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener/app/sap-dev-alb/5d52a8e10876ce03/bdd6913928e95676",
            "certificate_arn": "arn:aws:acm:us-east-1:520474760656:certificate/f8868954-7436-4268-9ddd-14584bd9ea4e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed static message root context",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener/app/sap-dev-alb/5d52a8e10876ce03/bdd6913928e95676",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:loadbalancer/app/sap-dev-alb/5d52a8e10876ce03",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_route53_zone.mynewdomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.app-alb.aws_lb.this",
            "module.app-alb.aws_lb_target_group.main",
            "module.app-alb.aws_security_group.this",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app1-2023041411292684160000000c/d8784cee5ef84b96",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener-rule/app/sap-dev-alb/5d52a8e10876ce03/bdd6913928e95676/c602b91eec8afbaf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app1*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener-rule/app/sap-dev-alb/5d52a8e10876ce03/bdd6913928e95676/c602b91eec8afbaf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener/app/sap-dev-alb/5d52a8e10876ce03/bdd6913928e95676",
            "priority": 1,
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_route53_zone.mynewdomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.app-alb.aws_lb.this",
            "module.app-alb.aws_lb_listener.frontend_https",
            "module.app-alb.aws_lb_target_group.main",
            "module.app-alb.aws_security_group.this",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app2-2023041411292684210000000d/24d5a6c207ceb2e6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener-rule/app/sap-dev-alb/5d52a8e10876ce03/bdd6913928e95676/2d5dc9707be9975d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app2*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener-rule/app/sap-dev-alb/5d52a8e10876ce03/bdd6913928e95676/2d5dc9707be9975d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:listener/app/sap-dev-alb/5d52a8e10876ce03/bdd6913928e95676",
            "priority": 2,
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_route53_zone.mynewdomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.app-alb.aws_lb.this",
            "module.app-alb.aws_lb_listener.frontend_https",
            "module.app-alb.aws_lb_target_group.main",
            "module.app-alb.aws_security_group.this",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app1-2023041411292684160000000c/d8784cee5ef84b96",
            "arn_suffix": "targetgroup/app1-2023041411292684160000000c/d8784cee5ef84b96",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app1-2023041411292684160000000c/d8784cee5ef84b96",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "false",
            "name": "app1-2023041411292684160000000c",
            "name_prefix": "app1-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app1-",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "app1-",
              "environment": "dev",
              "owners": "sap"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app2-2023041411292684210000000d/24d5a6c207ceb2e6",
            "arn_suffix": "targetgroup/app2-2023041411292684210000000d/24d5a6c207ceb2e6",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app2/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app2-2023041411292684210000000d/24d5a6c207ceb2e6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "false",
            "name": "app2-2023041411292684210000000d",
            "name_prefix": "app2-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app2-",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "app2-",
              "environment": "dev",
              "owners": "sap"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.my_app1_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app1-2023041411292684160000000c/d8784cee5ef84b96-2023041411293226650000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app1-2023041411292684160000000c/d8784cee5ef84b96",
            "target_id": "i-065e79b0838a9d2ae"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.app-alb.aws_lambda_permission.lb",
            "module.app-alb.aws_lb_target_group.main",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "0.my_app1_vm2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app1-2023041411292684160000000c/d8784cee5ef84b96-20230414112932414600000010",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app1-2023041411292684160000000c/d8784cee5ef84b96",
            "target_id": "i-07513677b7a0be9a0"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.app-alb.aws_lambda_permission.lb",
            "module.app-alb.aws_lb_target_group.main",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "1.my_app2_vm1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app2-2023041411292684210000000d/24d5a6c207ceb2e6-20230414112932414600000011",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app2-2023041411292684210000000d/24d5a6c207ceb2e6",
            "target_id": "i-0c4f2de5c0f1bdbe1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.app-alb.aws_lambda_permission.lb",
            "module.app-alb.aws_lb_target_group.main",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        },
        {
          "index_key": "1.my_app2_vm2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app2-2023041411292684210000000d/24d5a6c207ceb2e6-2023041411293224810000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:520474760656:targetgroup/app2-2023041411292684210000000d/24d5a6c207ceb2e6",
            "target_id": "i-0dd41a0165e1e91f9"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.app-alb.aws_lambda_permission.lb",
            "module.app-alb.aws_lb_target_group.main",
            "module.ec2_private_app1.aws_instance.this",
            "module.ec2_private_app2.aws_instance.this",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:security-group/sg-04213086f776287a1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04213086f776287a1",
            "ingress": [],
            "name": "sap-dev-alb-20230414112702355500000005",
            "name_prefix": "sap-dev-alb-",
            "owner_id": "520474760656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sap-dev-alb",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-alb",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion_ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f408238af346b4f",
            "arn": "arn:aws:ec2:us-east-1:520474760656:instance/i-044520052058ea5d0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-044520052058ea5d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newdocker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8b5c8fca107beb7",
            "private_dns": "ip-10-0-101-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.125",
            "public_dns": "ec2-54-83-84-87.compute-1.amazonaws.com",
            "public_ip": "54.83.84.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0473ecd840e053ecc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071cfcdbac1f41994",
            "tags": {
              "Name": "dev-Bastionhost",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-Bastionhost",
              "environment": "dev",
              "owners": "sap"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev-Bastionhost"
            },
            "vpc_security_group_ids": [
              "sg-01c461a125131bf54"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.bastion_ec2_instance.aws_iam_instance_profile.this",
            "module.bastion_ec2_instance.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private_app1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f408238af346b4f",
            "arn": "arn:aws:ec2:us-east-1:520474760656:instance/i-065e79b0838a9d2ae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065e79b0838a9d2ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newdocker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07c91b0372701d249",
            "private_dns": "ip-10-0-1-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df9bd5dee18dc185",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0980ed18cfe11dc84",
            "tags": {
              "Name": "dev-app1-1",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-app1-1",
              "environment": "dev",
              "owners": "sap"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev-app1-1"
            },
            "vpc_security_group_ids": [
              "sg-08cada966a598c31d"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f408238af346b4f",
            "arn": "arn:aws:ec2:us-east-1:520474760656:instance/i-07513677b7a0be9a0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07513677b7a0be9a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newdocker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-061cdc6568bdabece",
            "private_dns": "ip-10-0-2-86.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c7a99fcb2fefdd21",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f016db4977faadbc",
            "tags": {
              "Name": "dev-app1-2",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-app1-2",
              "environment": "dev",
              "owners": "sap"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev-app1-2"
            },
            "vpc_security_group_ids": [
              "sg-08cada966a598c31d"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_private_app2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f408238af346b4f",
            "arn": "arn:aws:ec2:us-east-1:520474760656:instance/i-0c4f2de5c0f1bdbe1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4f2de5c0f1bdbe1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newdocker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0237d50186c63d0e2",
            "private_dns": "ip-10-0-1-61.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0686ef4944c9e1ebc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0980ed18cfe11dc84",
            "tags": {
              "Name": "dev-app2-1",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-app2-1",
              "environment": "dev",
              "owners": "sap"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev-app2-1"
            },
            "vpc_security_group_ids": [
              "sg-08cada966a598c31d"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f408238af346b4f",
            "arn": "arn:aws:ec2:us-east-1:520474760656:instance/i-0dd41a0165e1e91f9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd41a0165e1e91f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newdocker",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b44f7582babc597",
            "private_dns": "ip-10-0-2-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059d3612bdf1c2286",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f016db4977faadbc",
            "tags": {
              "Name": "dev-app2-2",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-app2-2",
              "environment": "dev",
              "owners": "sap"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "dev-app2-2"
            },
            "vpc_security_group_ids": [
              "sg-08cada966a598c31d"
            ]
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:security-group/sg-074c709e38a276b7b",
            "description": "terraform load balancer security group for - http",
            "egress": [],
            "id": "sg-074c709e38a276b7b",
            "ingress": [],
            "name": "loadbalancer_sg-20230414112700051500000004",
            "name_prefix": "loadbalancer_sg-",
            "owner_id": "520474760656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadbalancer_sg",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "loadbalancer_sg",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-43572194",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-074c709e38a276b7b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1245940737",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074c709e38a276b7b",
            "security_group_rule_id": "sgr-05a5fac63e691fb0f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1530320635",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074c709e38a276b7b",
            "security_group_rule_id": "sgr-04a5d01683b5ded76",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:security-group/sg-08cada966a598c31d",
            "description": "Security Group with HTTP \u0026 SSH port open for entire VPC Block (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-08cada966a598c31d",
            "ingress": [],
            "name": "private-sg-20230414112700029500000002",
            "name_prefix": "private-sg-",
            "owner_id": "520474760656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "private-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1564867052",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08cada966a598c31d",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1403299089",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08cada966a598c31d",
            "security_group_rule_id": "sgr-0682b961eb1e50b08",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3754714159",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08cada966a598c31d",
            "security_group_rule_id": "sgr-0196b5f71070f207f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_sg.aws_security_group.this",
            "module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:security-group/sg-01c461a125131bf54",
            "description": "bastion host - SG",
            "egress": [],
            "id": "sg-01c461a125131bf54",
            "ingress": [],
            "name": "public-bastion-sg-20230414112700029500000003",
            "name_prefix": "public-bastion-sg-",
            "owner_id": "520474760656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-bastion-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "public-bastion-sg",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-382446890",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01c461a125131bf54",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3899836518",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01c461a125131bf54",
            "security_group_rule_id": "sgr-032e9255fd8211a68",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0312a3cbf8caa27a3",
            "domain": "vpc",
            "id": "eipalloc-0312a3cbf8caa27a3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-21-47-124.compute-1.amazonaws.com",
            "public_ip": "23.21.47.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sap-dev-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:internet-gateway/igw-071fe14f602e63292",
            "id": "igw-071fe14f602e63292",
            "owner_id": "520474760656",
            "tags": {
              "Name": "sap-dev-myvpc",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0312a3cbf8caa27a3",
            "association_id": "eipassoc-028e581b42045080a",
            "connectivity_type": "public",
            "id": "nat-094d01c4e05abdc75",
            "network_interface_id": "eni-04efec532659d7457",
            "private_ip": "10.0.101.187",
            "public_ip": "23.21.47.124",
            "subnet_id": "subnet-071cfcdbac1f41994",
            "tags": {
              "Name": "sap-dev-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-us-east-1a",
              "environment": "dev",
              "owners": "sap"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06873dbbcca3d9e1e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-094d01c4e05abdc75",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06873dbbcca3d9e1e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071fe14f602e63292",
            "id": "r-rtb-05d4e5c36c34500381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d4e5c36c3450038",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:route-table/rtb-0f88057db0af504a5",
            "id": "rtb-0f88057db0af504a5",
            "owner_id": "520474760656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sap-dev-myvpc-db",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-db",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:route-table/rtb-06873dbbcca3d9e1e",
            "id": "rtb-06873dbbcca3d9e1e",
            "owner_id": "520474760656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sap-dev-myvpc-private",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-private",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:route-table/rtb-05d4e5c36c3450038",
            "id": "rtb-05d4e5c36c3450038",
            "owner_id": "520474760656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sap-dev-myvpc-public",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-public",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b0314dfa2a7a3fb",
            "route_table_id": "rtb-0f88057db0af504a5",
            "subnet_id": "subnet-0b698a72468febd48"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035ecff5eed87d216",
            "route_table_id": "rtb-0f88057db0af504a5",
            "subnet_id": "subnet-0801e61b2af803f5d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da0f4a67a8a9cdc7",
            "route_table_id": "rtb-06873dbbcca3d9e1e",
            "subnet_id": "subnet-0980ed18cfe11dc84"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f55debdb15506960",
            "route_table_id": "rtb-06873dbbcca3d9e1e",
            "subnet_id": "subnet-0f016db4977faadbc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fcb40457ce94654",
            "route_table_id": "rtb-05d4e5c36c3450038",
            "subnet_id": "subnet-071cfcdbac1f41994"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00044ad5f12e58261",
            "route_table_id": "rtb-05d4e5c36c3450038",
            "subnet_id": "subnet-0060d75e440d0c022"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:subnet/subnet-0b698a72468febd48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b698a72468febd48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520474760656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sap-dev-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:subnet/subnet-0801e61b2af803f5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0801e61b2af803f5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520474760656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sap-dev-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:subnet/subnet-0980ed18cfe11dc84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0980ed18cfe11dc84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520474760656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sap-dev-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:subnet/subnet-0f016db4977faadbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f016db4977faadbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "520474760656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sap-dev-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:subnet/subnet-071cfcdbac1f41994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071cfcdbac1f41994",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "520474760656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sap-dev-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:subnet/subnet-0060d75e440d0c022",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0060d75e440d0c022",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "520474760656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sap-dev-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "sap"
            },
            "vpc_id": "vpc-0b5dbfe5fb483c0a6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:520474760656:vpc/vpc-0b5dbfe5fb483c0a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c95c3984858185b",
            "default_route_table_id": "rtb-08db38b5f35fa93a6",
            "default_security_group_id": "sg-01c4851932b63b602",
            "dhcp_options_id": "dopt-0c53292eccd24d0da",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5dbfe5fb483c0a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08db38b5f35fa93a6",
            "owner_id": "520474760656",
            "tags": {
              "Name": "sap-dev-myvpc",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "sap-dev-myvpc",
              "environment": "dev",
              "owners": "sap"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}